# rust-exercise

./: .gitignore  README.md
arrow-func-closure/: Cargo.toml
arrow-func-closure/src/: main.rs
async-await/: Cargo.toml
async-await/src/: main.rs
class-enum/: Cargo.toml
class-enum/src/: main.rs
cli-app/: Cargo.toml
cli-app/crates/cli/: Cargo.toml
cli-app/crates/cli/src/: main.rs
cli-app/crates/my-lib/: Cargo.toml
cli-app/crates/my-lib/src/: lib.rs
cli2/: Cargo.toml  test.txt
cli2/src/: main.rs
count-lock/: Cargo.toml
count-lock/src/: main.rs
error-handle/: Cargo.toml
error-handle/src/: main.rs
hello-world/: justfile
hello-world/src/: main.rs
json-transfer/: Cargo.toml  text.json
json-transfer/src/: main.rs
list/array/src/: main.rs
list/iterators/: Cargo.toml
list/iterators/src/: main.rs  names.json
mod/src/: main.rs
mod/src/object/: light.rs
option-result/: Cargo.toml
option-result/src/: main.rs
trait/src/: main.rs
