[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-lib = { path = "../my-lib" }
# log 創建日誌
log = "0.4"
# env_logger 輸出日誌
env_logger = "0.10.0"
# 解讀指令行參數
structopt = "0.3"
rmp-serde = "0.15"
anyhow = "1.0"

